--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 <body>
-  <h1>WebGame</h1>
+  <h1>webgame</h1>
   <div class="menu">
     <a href="https://www.roblox.com/login" target="_blank">Play Now</a>
     <a href="https://www.roblox.com/CreateAccount" target="_blank">Sign Up</a>
